# monorepo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pnpm-workspace.yaml  pyproject.toml
.ai/: architecture.md  (+4 more)
backend/abacus/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml
backend/abacus/alembic/: env.py
backend/abacus/alembic/versions/: a05bf0094fca_initial_schema.py  b3c4d5e6f7a8_add_currency_to_transactions.py  c1d2e3f4a5b6_add_transaction_links.py
backend/abacus/src/abacus/: config.py  main.py
backend/abacus/src/abacus/application/services/: asset_service.py  pnl.py  transaction_service.py
backend/abacus/src/abacus/domain/: exceptions.py
backend/abacus/src/abacus/domain/models/: asset.py  stock_search.py  transaction.py  transaction_link.py
backend/abacus/src/abacus/domain/ports/: repositories.py  stock_search.py
backend/abacus/src/abacus/infrastructure/auth/: dependencies.py  jwks.py
backend/abacus/src/abacus/infrastructure/persistence/: database.py  models.py
backend/abacus/src/abacus/infrastructure/persistence/repositories/: sqlalchemy_asset_repository.py  sqlalchemy_transaction_link_repository.py  sqlalchemy_transaction_repository.py
backend/abacus/src/abacus/presentation/: dependencies.py  middleware.py
backend/abacus/src/abacus/presentation/api/: assets.py  health.py  router.py  transactions.py
backend/abacus/src/abacus/presentation/schemas/: asset_schemas.py  transaction_schemas.py
backend/abacus/tests/: conftest.py
backend/abacus/tests/e2e/: test_api.py
backend/abacus/tests/unit/: test_asset_service.py  test_finnhub_client.py  test_pnl.py  test_transaction_service.py
backend/demo/: Dockerfile  alembic.ini  pyproject.toml
backend/demo/alembic/: env.py
backend/demo/alembic/versions/: 0001_create_items_table.py
backend/demo/src/app/: config.py  main.py
backend/demo/src/app/application/services/: item_service.py
backend/demo/src/app/domain/: exceptions.py
backend/demo/src/app/domain/ports/: cache.py  repositories.py
backend/demo/src/app/infrastructure/auth/: jwt_auth.py
backend/demo/src/app/infrastructure/cache/: redis_cache.py
backend/demo/src/app/infrastructure/persistence/: database.py  models.py
backend/demo/src/app/infrastructure/persistence/repositories/: sqlalchemy_item_repository.py
backend/demo/src/app/presentation/: dependencies.py
backend/demo/src/app/presentation/api/: items.py  router.py
backend/demo/src/demo/: config.py  main.py
backend/demo/src/demo/application/services/: item_service.py
backend/demo/src/demo/domain/models/: item.py
backend/demo/src/demo/domain/ports/: repositories.py
backend/demo/src/demo/infrastructure/auth/: jwt_auth.py
backend/demo/src/demo/infrastructure/cache/: noop_cache.py  redis_cache.py
backend/demo/src/demo/infrastructure/persistence/: database.py  models.py
backend/demo/src/demo/presentation/: dependencies.py  middleware.py
backend/demo/src/demo/presentation/api/: items.py  router.py
backend/demo/src/demo/presentation/schemas/: item_schemas.py
backend/demo/tests/: conftest.py
backend/demo/tests/e2e/: test_items_api.py
backend/demo/tests/integration/: test_item_repository.py
backend/demo/tests/unit/: test_item_service.py
backend/gateway/: Dockerfile  pyproject.toml
backend/gateway/src/gateway/: main.py
backend/mariland/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml
backend/mariland/alembic/: env.py
backend/mariland/alembic/versions/: 0001_initial.py  0002_add_imagen_url_to_pisos.py  0003_add_owner_to_pisos.py
backend/mariland/src/app/: config.py  main.py
backend/mariland/src/app/application/services/: comment_service.py  piso_service.py  price_service.py
backend/mariland/src/app/domain/: exceptions.py
backend/mariland/src/app/domain/models/: piso.py  price_history.py
backend/mariland/src/app/domain/ports/: fetcher.py  repositories.py
backend/mariland/src/app/infrastructure/persistence/: database.py  models.py
backend/mariland/src/app/infrastructure/scraping/: jina_anthropic_scraper.py  jina_fetcher.py  llm_scraper.py
backend/mariland/src/app/presentation/: dependencies.py  middleware.py
backend/mariland/src/app/presentation/api/: comments.py  pisos.py  prices.py  router.py
backend/mariland/src/app/presentation/schemas/: piso_schemas.py
backend/mariland/src/mariland/: config.py  main.py
backend/mariland/src/mariland/application/services/: comment_service.py  piso_service.py  price_service.py
backend/mariland/src/mariland/domain/: exceptions.py
backend/mariland/src/mariland/domain/models/: comment.py  piso.py
backend/mariland/src/mariland/domain/ports/: repositories.py  scraper.py
backend/mariland/src/mariland/infrastructure/persistence/: database.py  models.py
backend/mariland/src/mariland/infrastructure/scraping/: jina_fetcher.py  llm_scraper.py  scrapingbee_fetcher.py
backend/mariland/src/mariland/presentation/: dependencies.py  middleware.py
backend/mariland/src/mariland/presentation/api/: comments.py  pisos.py  prices.py  router.py
backend/mariland/src/mariland/presentation/schemas/: piso_schemas.py  sse_events.py
backend/mariland/tests/: conftest.py
backend/mariland/tests/e2e/: test_pisos_api.py
backend/mariland/tests/integration/: test_comment_repository.py  test_piso_repository.py  test_price_repository.py
backend/mariland/tests/unit/: test_comment_service.py  test_fetchers.py  test_piso_service.py  test_price_service.py  test_scraper.py
(+102 files in other folders)
