[project]
name = "monorepo"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
    "backend/shared",
    "backend/demo",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/app/infrastructure/auth/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
