[project]
name = "gateway"
version = "0.1.0"
description = "Gateway — single Render service routing /demo and /mariland"
requires-python = ">=3.12"
dependencies = [
    "demo",
    "mariland",
    "abacus",
]

[tool.uv.sources]
demo = { workspace = true }
mariland = { workspace = true }
abacus = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
